--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.10",
     "firebase": "^8.9.0",
+    "node-sass": "^6.0.1",
     "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
